trunk/Archive2/5d/c9a75f28ebd70a/output
main.cpp: In function 'int main()':
main.cpp:20:29: error: 'BOARD_DIMESIONS' was not declared in this scope
      for (size_t u = 0; u < BOARD_DIMESIONS; ++u)
                             ^
